--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
       src="https://kit.fontawesome.com/7697ce874f.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- css -->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Header -->
@@ -30,14 +39,7 @@
 
     <!-- Video Player -->
     <section class="player">
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/LeFoUir7HwI"
-        frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
+      <video controls src="video/video.mp4"></video>
     </section>
 
     <!-- Video Info -->
