--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- js -->
+    <script src="main.js" defer></script>
+
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
 
@@ -42,98 +45,102 @@
       <video controls src="video/video.mp4"></video>
     </section>
 
-    <!-- Video Info -->
-    <section class="info">
-      <!-- Metadata -->
-      <div class="metadata">
-        <ul class="hashtag">
-          <li>#DreamCoding</li>
-          <li>#DreamCoders</li>
-          <li>#Ellie</li>
+    <div class="infoAndupNext">
+      <!-- Video Info -->
+      <section class="info">
+        <!-- Metadata -->
+        <div class="metadata">
+          <ul class="hashtag">
+            <li>#DreamCoding</li>
+            <li>#DreamCoders</li>
+            <li>#Ellie</li>
+          </ul>
+          <div class="titleAndButton">
+            <span class="title clamp">
+              Clone Coding: Youtube Mobile Website 유튜브 모바일 웹사이트 따라
+              만들기 | 프론트엔드 개발자 입문편: HTML, CSS, Javascript
+              드림코딩과 함께하는 프론트엔드 실전 입문편
+            </span>
+            <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
+          </div>
+          <span class="views">1M views 1 month ago</span>
+        </div>
+        <!-- Action buttons -->
+        <ul class="actions">
+          <li>
+            <button>
+              <i class="fas fa-thumbs-up active"></i><span>1K</span>
+            </button>
+          </li>
+          <li>
+            <button><i class="fas fa-thumbs-down"></i><span>0</span></button>
+          </li>
+          <li>
+            <button><i class="fas fa-share"></i><span>Share</span></button>
+          </li>
+          <li>
+            <button><i class="fas fa-plus"></i><span>Save</span></button>
+          </li>
+          <li>
+            <button>
+              <i class="fab fa-font-awesome-flag"></i><span>Report</span>
+            </button>
+          </li>
         </ul>
-        <div class="titleAndButton">
-          <span class="title clamp">
-            Clone Coding: Youtube Mobile Website 유튜브 모바일 웹사이트 따라
-            만들기 | 프론트엔드 개발자 입문편: HTML, CSS, Javascript 드림코딩과
-            함께하는 프론트엔드 실전 입문편
-          </span>
-          <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
+        <!-- Channel description -->
+        <div class="channel">
+          <div class="metadata">
+            <img src="image/unnamed.jpg" alt="" />
+            <div class="info">
+              <span class="name">
+                WELOVE CREATIVE TEAM
+              </span>
+              <span class="subscribers">1M subcribers</span>
+            </div>
+          </div>
+          <button class="subscribe">subscribe</button>
         </div>
-        <span class="views">1M views 1 month ago</span>
-      </div>
-      <!-- Action buttons -->
-      <ul class="actions">
-        <li>
-          <button>
-            <i class="fas fa-thumbs-up"><span>1K</span></i>
-          </button>
-        </li>
-        <li>
-          <button>
-            <i class="fas fa-thumbs-down"><span>0</span></i>
-          </button>
-        </li>
-        <li>
-          <button><i class="fas fa-share"></i><span>Share</span></button>
-        </li>
-        <li>
-          <button><i class="fas fa-plus"></i><span>Save</span></button>
-        </li>
-        <li>
-          <button>
-            <i class="fab fa-font-awesome-flag"></i><span>Report</span>
-          </button>
-        </li>
-      </ul>
-      <!-- Channel description -->
-      <div class="channel">
-        <img src="image/unnamed.jpg" alt="" />
-        <div class="info">
-          <span class="name">
-            WELOVE CREATIVE TEAM
-          </span>
-          <span class="subscribers">1M subcribers</span>
-        </div>
-        <button class="subscribe">subscribe</button>
-      </div>
-    </section>
+      </section>
 
-    <!-- up next -->
-    <section class="upNext">
-      <span class="title">Up next</span>
-      <ul>
-        <li class="item">
-          <div class="img"><img src="image/1.PNG" alt="" /></div>
-          <div class="itemInfo">
-            <span class="title">WELOVE-선한 능력으로(Live at대반전의 밤)</span>
-            <span class="name">WELOVE CREATIVE TEAM</span>
-            <span class="views">82K views</span>
-          </div>
-          <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
-        </li>
-        <li class="item">
-          <div class="img"><img src="image/2.PNG" alt="" /></div>
-          <div class="itemInfo">
-            <span class="title"
-              >WELOVE-낮은 곳으로 & 시간을 뚫고(Live at Call On Me Camp)</span
-            >
-            <span class="name">WELOVE CREATIVE TEAM</span>
-            <span class="views">82K views</span>
-          </div>
-          <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
-        </li>
-        <li class="item">
-          <div class="img"><img src="image/3.PNG" alt="" /></div>
-          <div class="itemInfo">
-            <span class="title"
-              >WELOVE-사랑이 소망됨을(Love Became Our Hope/Eng Sub)</span
-            >
-            <span class="name">WELOVE CREATIVE TEAM</span>
-            <span class="views">82K views</span>
-          </div>
-          <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
-        </li>
-      </ul>
-    </section>
+      <!-- up next -->
+      <section class="upNext">
+        <span class="title">Up next</span>
+        <ul>
+          <li class="item">
+            <div class="img"><img src="image/1.PNG" alt="" /></div>
+            <div class="itemInfo">
+              <span class="title"
+                >WELOVE-선한 능력으로(Live at대반전의 밤)</span
+              >
+              <span class="name">WELOVE CREATIVE TEAM</span>
+              <span class="views">82K views</span>
+            </div>
+            <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+          </li>
+          <li class="item">
+            <div class="img"><img src="image/2.PNG" alt="" /></div>
+            <div class="itemInfo">
+              <span class="title"
+                >WELOVE-낮은 곳으로 & 시간을 뚫고(Live at Call On Me Camp)</span
+              >
+              <span class="name">WELOVE CREATIVE TEAM</span>
+              <span class="views">82K views</span>
+            </div>
+            <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+          </li>
+          <li class="item">
+            <div class="img"><img src="image/3.PNG" alt="" /></div>
+            <div class="itemInfo">
+              <span class="title"
+                >WELOVE-사랑이 소망됨을(Love Became Our Hope/Eng Sub)</span
+              >
+              <span class="name">WELOVE CREATIVE TEAM</span>
+              <span class="views">82K views</span>
+            </div>
+            <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+          </li>
+        </ul>
+      </section>
+    </div>
   </body>
 </html>
