--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
         <span class="title">Up next</span>
         <ul>
           <li class="item">
-            <div class="img"><img src="image/1.PNG" alt="" /></div>
+            <div class="img"><img src="image/1.png" alt="" /></div>
             <div class="itemInfo">
               <span class="title"
-                >WELOVE-선한 능력으로(Live at대반전의 밤)</span
+                >프론트엔드 강의, 프론트엔드 개발자가 되고 싶다면? 웹개발
+                입문자편 강의를 시작합니다 ⭐️ (HTML, CSS, Javascript + 실전
+                프로젝트)</span
               >
               <span class="name">WELOVE CREATIVE TEAM</span>
               <span class="views">82K views</span>
@@ -118,10 +120,11 @@
             <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
           </li>
           <li class="item">
-            <div class="img"><img src="image/2.PNG" alt="" /></div>
+            <div class="img"><img src="image/2.png" alt="" /></div>
             <div class="itemInfo">
               <span class="title"
-                >WELOVE-낮은 곳으로 & 시간을 뚫고(Live at Call On Me Camp)</span
+                >HTML 기초, React 할때 꼭 필요한 팁! 쉽다고 무시하면 안돼요 |
+                프론트엔드 개발자 입문편: HTML, CSS, Javascrip</span
               >
               <span class="name">WELOVE CREATIVE TEAM</span>
               <span class="views">82K views</span>
@@ -129,10 +132,11 @@
             <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
           </li>
           <li class="item">
-            <div class="img"><img src="image/3.PNG" alt="" /></div>
+            <div class="img"><img src="image/3.png" alt="" /></div>
             <div class="itemInfo">
               <span class="title"
-                >WELOVE-사랑이 소망됨을(Love Became Our Hope/Eng Sub)</span
+                >HTML 태그 완성, 웹 포트폴리오 만들기 전에 꼭 보세요 |
+                프론트엔드 개발자 입문편: HTML, CSS, Javascript</span
               >
               <span class="name">WELOVE CREATIVE TEAM</span>
               <span class="views">82K views</span>
